--- a/src/app/blog-page/blog-page.component.html
+++ b/src/app/blog-page/blog-page.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="wrapper">
     <!-- content -->	
     <div class="content">
@@ -213,3 +214,4 @@
 
 
 </div>
+<app-footer></app-footer>
