--- a/src/app/latout/header/header.component.html
+++ b/src/app/latout/header/header.component.html
@@ -40,7 +40,7 @@
                     <a routerLink="" >Accueil </a>
                 </li>
                 <li>
-                    <a routerLink="/listing">maison d'hotes</a>
+                    <a routerLink="/maisons">maison d'hotes</a>
                 </li>
                 <li>
                     <a routerLink="/blog_page">Actualités</a>
@@ -68,20 +68,7 @@
             </form>
         </div>
     </div>
-    <!-- header-search-wrapper end  -->				
-    <!-- wishlist-wrap--> 
-    <div class="header-modal novis_wishlist tabs-act">
-    
-        <!--tabs -->                       
-        <div class="tabs-container">
-            <div class="tab">
-                <!--tab -->
-<app-notification></app-notification>
-            </div>
-            <!--tabs end -->							
-        </div>
-    </div>
-    <!--wishlist-wrap end -->                            
+                          
 
 </header>
 
