--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="wrapper">
     <!-- content -->	
     <div class="content">
@@ -107,19 +108,89 @@
             </div>
             <div class="contact-form-overlay"></div>
         </div>
-        <!--contact-form-wrap end-->
-                <!--box-widget end --> 									
+  								
             </div>
         </section>
         <!-- section end-->	
     </div>
-    <!-- content end -->	
 
-    <!-- footer -->	
-    
-    <!-- footer end -->
 </div>
-        <!--contact-form-wrap -->	
- 	
-
-<!-- <app-why-choose></app-why-choose>         -->
+            <!-- wrapper  -->	
+            <div id="wrapper">
+                <!-- content -->	
+                <div class="content">
+                    <!-- section -->
+                    <section class="gray-bg small-padding">
+                        <div class="container">
+                            <div class="row">
+                                <!-- services-item -->
+                                <div class="col-md-4">
+                                    <div class="services-item fl-wrap">
+                                        <i class="fal fa-headset"></i>
+                                        <h4>24 Hours Support <span>01</span></h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.</p>
+                                        <a href="#" class="serv-link">Read more</a>
+                                    </div>
+                                </div>
+                                <!-- services-item  end-->
+                                <!-- services-item -->
+                                <div class="col-md-4">
+                                    <div class="services-item fl-wrap">
+                                        <i class="fal fa-users-cog"></i>
+                                        <h4>User Admin Panel <span>02</span></h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.</p>
+                                        <a href="#" class="serv-link">Read more</a>
+                                    </div>
+                                </div>
+                                <!-- services-item  end-->
+                                <!-- services-item -->
+                                <div class="col-md-4">
+                                    <div class="services-item fl-wrap">
+                                        <i class="fal fa-phone-laptop"></i>
+                                        <h4>Mobile Friendly <span>03</span></h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar.</p>
+                                        <a href="#" class="serv-link">Read more</a>
+                                    </div>
+                                </div>
+                                <!-- services-item  end-->								
+                            </div>
+                        </div>
+                    </section>
+                    <!-- section end-->	
+                    <!-- section -->
+                    <section>
+                        <div class="container">
+                            <!--about-wrap -->
+                            <div class="about-wrap">
+                                <div class="row">
+                                    <div class="col-md-5">
+                                        <div class="about-title fl-wrap">
+                                            <h2>Our Company <span>Story</span></h2>
+                                            <h4>Check video presentation to find   out more about us .</h4>
+                                        </div>
+                                        <p>Ut euismod ultricies sollicitudin. Curabitur sed dapibus nulla. Nulla eget iaculis lectus. Mauris ac maximus neque. Nam in mauris quis libero sodales eleifend. Morbi varius, nulla sit amet rutrum elementum, est elit finibus tellus, ut tristique elit risus at metus.</p>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur nulla. Nulla posuere sapien vitae lectus suscipit, et pulvinar nisi tincidunt. Aliquam erat volutpat. Curabitur convallis fringilla diam sed aliquam. Sed tempor iaculis massa faucibus feugiat. In fermentum facilisis massa, a consequat purus viverra.
+                                        </p>
+                                        <a href="#" class="btn small-btn float-btn color-bg">Read More</a>
+                                    </div>
+                                    <div class="col-md-1"></div>
+                                    <div class="col-md-6">
+                                        <div class="about-img fl-wrap">
+                                            <img src="assets/images/all/18.jpg" class="respimg" alt="">
+                                            <div class="about-img-hotifer color-bg">
+                                                <p>Your website is fully responsive so visitors can view your content from their choice of device.</p>
+                                                <h4>Mark Antony</h4>
+                                                <h5>Homeradar CEO</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- about-wrap end  -->							
+                        </div>
+                    </section>
+             
+                </div></div>
+               
+<app-footer></app-footer>
