--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,22 @@
-            <app-cover></app-cover>
-            <!-- wrapper  -->	
-            <div id="wrapper">
-                <!-- content -->	
-                <div class="content">
-<app-blog-list></app-blog-list>
-<app-partenaire></app-partenaire>
+<app-header></app-header>				
+<app-cover></app-cover>
 
-<app-blog></app-blog>
 
-<!-- <app-clients-say></app-clients-say> -->
+     <app-home-list></app-home-list>
 
-                    <!-- section end-->	
-                   
-               <app-best-cities></app-best-cities>					
-                    <!-- section -->
-                
-                    <!-- section end-->					
-                    <!-- section -->
-                    <!-- section end-->	 
-                    <!-- section -->
-               <!-- <app-clients-say></app-clients-say> -->
-                    <!-- section end-->
-                </div>
-                <!-- content end -->	
-                <!-- subscribe-wrap -->	
-             
-                <!-- subscribe-wrap end -->	
-            </div>
-            <!-- wrapper end -->
+<section>
+     <app-partenaire></app-partenaire>
+</section>
+
+     <app-blog></app-blog>
+
+<section>
+     <app-best-cities></app-best-cities>					
+</section>
+
+    <app-clients-say></app-clients-say>					
+
+    <app-why-choose></app-why-choose>					
+
+
+<app-footer></app-footer>					
